# file_downloader

./: CMakeLists.txt  ReadMe.md  main.cpp
include/: BoostUtils.h  Chunk.h  CurlUtils.h  Downloader.h
src/: BoostUtils.cpp  Chunk.cpp  CurlUtils.cpp
